# super-sniffle

./: .conkyrc  .gitignore  Dockerfile  README.md  __init__.py  __main__.py  cv_env_init.py  deepin_directory.py  floyd_steinberg.py  image_format_conversion.py  initial.md  pyproject.toml  rotate_point.py  settings.ini  settings.json  test_yield_from_and_async.py  tiny_code.ipynb  tornado_handlers.py  tornado_web_server.py  tornado_web_server_legacy.py  tornado_websocket_client.py  zip_codes.py
cv_utils/: detect_colour.py  detect_table.py  image_skeletonize.py  rotate_point.py
cython_demo/: extension_types.pyx  setup.py
static/css/: chatroom.css  site.css
static/js/: chatroom.js
template/: base.html  calc.html  chatroom.html  cv.html  files.html  index.html  login.html  regis.html  show_settings.html
utils/: context_manage.py  send_and_receive_email.py  tiny_code.ipynb  utils.py
